[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[metadata]
name = basic-pitch
version = attr: basic_pitch.__version__
description = Basic Pitch, a lightweight yet powerful audio-to-MIDI converter with pitch bend detection.
long_description = Basic Pitch, a lightweight yet powerful audio-to-MIDI converter with pitch bend detection. See https://github.com/spotify/basic-pitch for more details.
author = Spotify
author_email = basic-pitch@spotify.com
maintainer = Spotify
maintainer_email = basic-pitch@spotify.com
url = https://github.com/spotify/basic-pitch
keywords = 
license = Apache 2.0
classifiers = 
	Development Status :: 5 - Production/Stable
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
	librosa>=0.8.0
	mir_eval>=0.6
	numpy<1.24,>=1.18
	pretty_midi>=0.2.9
	resampy>=0.2.2
	scipy>=1.4.1
	tensorflow>=2.4.1; platform_machine != 'arm64'
	tensorflow-macos>=2.4.1; platform_machine == 'arm64'
	typing_extensions

[options.entry_points]
console_scripts = 
	basic-pitch = basic_pitch.predict:main

[options.extras_require]
test = 
	coverage>=5.0.2
	pytest>=6.1.1
	pytest-mock
docs = 
	mkdocs>=1.0.4
dev = 
	basic_pitch[test,docs]
	bump2version>=1.0.1
	mypy
	tox

[bumpversion:file:basic_pitch/__init__.py]

[bdist_wheel]
universal = 1

